# bachelor-project

./: .coverage  README.md  pyproject.toml
tests/: test_math.py
