[tool.poetry]
name = "bachelor-project"
version = "0.1.0"
description = "For my bachelor project I implemented a probabilistic principal component analysis"
authors = ["DueViktor <viktorduep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
